# Bias-Recommendations

./: .gitignore  README.md  RESULTS.md  eval_ai_mentions.py  eval_ai_mentions_open_vs_close.py  extract_wildchat_prompts_v2.py  filter_wildchat_pass_only.md  filter_wildchat_pass_only.py  main.py  main_openai.py  personas_job.sh  project_export.md  pyproject.toml  run_personas.py  wmd_valence_analysis_with_ci.py
constants/: __init__.py  llm_configs.py  models.py  personas.py  questions.py
data/: responses.csv
data/closed_models/: responses_claude_paraphrases_det.json  responses_deepseek_chat_paraphrases_det.json  responses_gemini_2_5_flash_paraphrases_det.json  responses_gpt_5_1_paraphrases_det.json  responses_grok-4_1-fast-_paraphrases_det.json
data/open-models/: responses_01-ai_Yi-1.5-34B-Chat_paraphrases_det.json  responses_Qwen_Qwen3-235B-A22B-Instruct-2507-FP8_paraphrases_det.json  responses_Qwen_Qwen3-Next-80B-A3B-Instruct_paraphrases_det.json  responses_gemma-3-27b-it.json  responses_gpt-oss-120b_paraphrases_det.json  responses_meta-llama_Llama-3.3-70B-Instruct_paraphrases_det.json  responses_mistralai_Ministral-3-14B-Instruct-2512_paraphrases.json
data/open_models/: responses_Mixtral-8x7B-Instruct-v0.1.json  responses_Qwen_Qwen3-32B_paraphrases_det.json  responses_dolphin-2.9.1-yi-1.5-34b.json  (+3 more)
jobs/: full_pipeline_new_models.sh
llm/: __init__.py  llm_client.py
openai_llm/: __init__.py  openai_client.py
scripts/: analyze_responses.py  analyze_stats.py  eval_ai_mentions.py  eval_by_domain.py  eval_open_vs_close_welch_ttest.py
(+10 files in other folders)
